--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -51,17 +51,20 @@
             android:layout_gravity="center_vertical">
 
             <Button
+                android:id="@+id/remove_button"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:background="@drawable/baseline_remove_24" />
 
             <TextView
+                android:id="@+id/cartQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:text="1" />
 
             <Button
+                android:id="@+id/add_button"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:background="@drawable/baseline_add_24" />
