--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -56,7 +56,8 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:paddingHorizontal="10dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tools:listitem="@layout/cart" />
 
@@ -138,6 +139,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/placeOrder_button"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="Place Order"
