--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -17,7 +17,8 @@
         <ImageView
             android:id="@+id/orderimage"
             android:layout_width="80dp"
-            android:layout_height="80dp" />
+            android:layout_height="80dp"
+            android:background="@color/white"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
