--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -11,6 +11,7 @@
         android:background="@drawable/cart_container"
         android:gravity="center_vertical"
         android:paddingHorizontal="10dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
