--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,18 +7,6 @@
     tools:context=".Home"
     android:background="#f1f1f1f1">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:iconifiedByDefault="false"
-        android:background="@drawable/searchbar"
-        app:queryHint="Seach for items..."/>
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,8 +15,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_view"
         app:layout_constraintVertical_weight="1">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,6 +26,10 @@
             android:orientation="vertical"
             android:paddingBottom="100dp">
 
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="60dp"
+                android:background="@drawable/jollibeelogo"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -91,11 +83,11 @@
                         <Button
                             android:id="@+id/orderc1_button"
                             android:layout_width="120dp"
-                            android:layout_height="28sp"
+                            android:layout_height="30dp"
                             android:layout_marginTop="30dp"
                             android:layout_marginBottom="10dp"
                             android:background="@drawable/ordernow_button"
-                            android:text="Add to cart"
+                            android:text="Order Now"
                             android:textAllCaps="false"
                             android:textColor="#ffffff"
                             android:textSize="13sp" />
@@ -139,13 +131,13 @@
                             android:text="129.00" />
 
                         <Button
-                            android:id="@+id/orderc3_button"
+                            android:id="@+id/orderc4_button"
                             android:layout_width="120dp"
-                            android:layout_height="28sp"
+                            android:layout_height="30dp"
                             android:layout_marginTop="15dp"
                             android:layout_marginBottom="10dp"
                             android:background="@drawable/ordernow_button"
-                            android:text="Add to cart"
+                            android:text="Order Now"
                             android:textAllCaps="false"
                             android:textColor="#ffffff"
                             android:textSize="13sp" />
@@ -189,13 +181,13 @@
                             android:text="139.00" />
 
                         <Button
-                            android:id="@+id/orderc2_button"
+                            android:id="@+id/orderc3_button"
                             android:layout_width="120dp"
-                            android:layout_height="28sp"
+                            android:layout_height="30dp"
                             android:layout_marginTop="15dp"
                             android:layout_marginBottom="10dp"
                             android:background="@drawable/ordernow_button"
-                            android:text="Add to cart"
+                            android:text="Order Now"
                             android:textAllCaps="false"
                             android:textColor="#ffffff"
                             android:textSize="13sp" />
@@ -239,13 +231,13 @@
                             android:text="195.00" />
 
                         <Button
-                            android:id="@+id/orderc4_button"
+                            android:id="@+id/orderc2_button"
                             android:layout_width="120dp"
-                            android:layout_height="28sp"
+                            android:layout_height="30dp"
                             android:layout_marginTop="30dp"
                             android:layout_marginBottom="10dp"
                             android:background="@drawable/ordernow_button"
-                            android:text="Add to cart"
+                            android:text="Order Now"
                             android:textAllCaps="false"
                             android:textColor="#ffffff"
                             android:textSize="13sp" />
@@ -273,29 +265,29 @@
                             android:id="@+id/c5_image"
                             android:layout_width="match_parent"
                             android:layout_height="100dp"
-                            android:src="@drawable/twochicken" />
+                            android:src="@drawable/chickenfloat" />
 
                         <TextView
                             android:id="@+id/c5_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2pc Chickenjoy Solo"
+                            android:text="2pc Chickenjoy w/ Coke Float"
                             android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/c5price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="195.00" />
+                            android:text="149.00" />
 
                         <Button
                             android:id="@+id/orderc5_button"
                             android:layout_width="120dp"
-                            android:layout_height="28sp"
+                            android:layout_height="30dp"
                             android:layout_marginTop="30dp"
                             android:layout_marginBottom="10dp"
                             android:background="@drawable/ordernow_button"
-                            android:text="Add to cart"
+                            android:text="Order Now"
                             android:textAllCaps="false"
                             android:textColor="#ffffff"
                             android:textSize="13sp" />
@@ -323,29 +315,29 @@
                             android:id="@+id/c6_image"
                             android:layout_width="match_parent"
                             android:layout_height="100dp"
-                            android:src="@drawable/twochicken" />
+                            android:src="@drawable/chickenpalabok" />
 
                         <TextView
                             android:id="@+id/c6_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2pc Chickenjoy Solo"
+                            android:text="1pc Chickenjoy w/ Palabok"
                             android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/c6price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="195.00" />
+                            android:text="129.00" />
 
                         <Button
                             android:id="@+id/orderc6_button"
                             android:layout_width="120dp"
-                            android:layout_height="28sp"
+                            android:layout_height="30dp"
                             android:layout_marginTop="30dp"
                             android:layout_marginBottom="10dp"
                             android:background="@drawable/ordernow_button"
-                            android:text="Add to cart"
+                            android:text="Order Now"
                             android:textAllCaps="false"
                             android:textColor="#ffffff"
                             android:textSize="13sp" />
