--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -45,10 +45,12 @@
                 android:layout_weight="1"
                 android:paddingStart="30dp"
                 android:paddingEnd="30dp"
+                android:layout_marginBottom="50dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tools:listitem="@layout/cart" />
 
         </LinearLayout>
+
 
     </ScrollView>
 
@@ -130,17 +132,38 @@
                 android:layout_marginEnd="30dp"
                 android:text="0.00" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/placeOrder_button"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:background="@drawable/placeorder"
-            android:paddingHorizontal="100dp"
-            android:text="Place Order"
-            android:textAllCaps="false"
-            android:textColor="#ffffff" />
+            android:gravity="center_horizontal"
+            android:padding="8dp">
+
+            <Button
+                android:id="@+id/addmore_button"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5dp"
+                android:text="Add more"
+                android:paddingHorizontal="40dp"
+                android:layout_marginRight="10dp"
+                android:textAllCaps="false"
+                android:textColor="#ffff"
+                android:background="@drawable/placeorder"/>
+
+            <Button
+                android:id="@+id/placeOrder_button"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/placeorder"
+                android:paddingHorizontal="40dp"
+                android:text="Place Order"
+                android:layout_marginLeft="10dp"
+                android:textAllCaps="false"
+                android:textColor="#ffffff" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
