--- a/app/src/main/res/layout/fragment_reciept.xml
+++ b/app/src/main/res/layout/fragment_reciept.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Reciept">
+    tools:context=".Receipt">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -18,28 +18,65 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/reciepttitle_text"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:text="Receipt"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:gravity="center"
+            android:paddingBottom="10dp">
 
-        <TextView
-            android:id="@+id/receiptdate_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:text="Date: 2024-07-30" />
+            <ImageView
+                android:textAlignment="center"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:background="@drawable/jollibeelogo"/>
+            <TextView
+                android:id="@+id/reciepttitle_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Jollibee Inc"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/recieptaddress_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cauringan, Sison, Pangasinan"
+                android:textSize="12sp"
+                android:textAlignment="center"/>
+            <TextView
+                android:id="@+id/recieptabranch_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Jollibee Inc."
+                android:textSize="12sp"
+                android:textAlignment="center"/>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/receiptID_text"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:text="Order ID: 123456" />
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date: "
+                android:paddingBottom="8dp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/receiptdate_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="8dp"
+                android:text="2024-07-30" />
+
+        </LinearLayout>
+
+
 
 
         <LinearLayout
@@ -84,13 +121,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="8dp">
+            android:paddingBottom="8dp"
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:id="@+id/receiptmaster_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginTop="10dp"
                 android:text="Master:"
                 android:textStyle="bold"/>
 
@@ -98,6 +137,7 @@
                 android:id="@+id/receiptmasterTotal_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="198.00" />
         </LinearLayout>
 
