--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:gravity="center"
     android:padding="5dp">
 
     <ImageView
         android:id="@+id/receiptItemImage"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/white"/>
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:id="@+id/receiptItemName"
@@ -18,21 +18,29 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Item Name"
-        android:textSize="12sp"/>
+        android:textSize="15sp"/>
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="x"
+        android:textAlignment="textEnd"
+        android:textSize="15sp"/>
     <TextView
         android:id="@+id/receiptItemQuantity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="x1"
-        android:textSize="12sp"/>
+        android:text="1"
+        android:textAlignment="textStart"
+        android:textSize="15sp"/>
     <TextView
         android:id="@+id/receiptItemPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0.00"
-        android:textSize="12sp"/>
+        android:textSize="15sp"/>
 
 
 
